[gd_scene load_steps=16 format=2]

[ext_resource path="res://Scenes/Collisions/Hurtbox.tscn" type="PackedScene" id=1]
[ext_resource path="res://Scenes/Collisions/Hitbox.tscn" type="PackedScene" id=2]
[ext_resource path="res://Assets/Mobs/Bomb.png" type="Texture" id=3]
[ext_resource path="res://Scripts/Bomb.gd" type="Script" id=4]
[ext_resource path="res://Assets/Mobs/Effects/Los_Alert.png" type="Texture" id=5]
[ext_resource path="res://Assets/Mobs/Effects/Explosion.png" type="Texture" id=6]

[sub_resource type="Animation" id=6]
resource_name = "Follow"
length = 0.8
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Bomb_Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ 8, 11, 12 ]
}

[sub_resource type="Animation" id=1]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Bomb_Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0 ]
}

[sub_resource type="Animation" id=2]
resource_name = "Walk"
length = 0.8
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Bomb_Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ 0, 2, 4 ]
}

[sub_resource type="Animation" id=7]
resource_name = "Alarm"
length = 0.8
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Alarm:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 0, 1 ]
}

[sub_resource type="Animation" id=9]
resource_name = "Explosion"
length = 0.7
tracks/0/type = "value"
tracks/0/path = NodePath("Explosion:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.175, 0.35, 0.425, 0.5, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 7, 0, 2, 3, 4, 6, 7 ]
}

[sub_resource type="Animation" id=8]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Alarm:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Explosion:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0 ]
}

[sub_resource type="CircleShape2D" id=3]
radius = 4.0

[sub_resource type="CircleShape2D" id=5]
radius = 32.0

[sub_resource type="CircleShape2D" id=4]
radius = 4.0

[node name="Bomb" type="KinematicBody2D"]
script = ExtResource( 4 )

[node name="Alarm" type="Sprite" parent="."]
position = Vector2( -0.5, -9.5 )
scale = Vector2( 0.4375, 0.4375 )
texture = ExtResource( 5 )
hframes = 2

[node name="Bomb_Sprite" type="Sprite" parent="."]
texture = ExtResource( 3 )
hframes = 4
vframes = 4

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Follow = SubResource( 6 )
anims/RESET = SubResource( 1 )
anims/Walk = SubResource( 2 )

[node name="AnimationAlarm" type="AnimationPlayer" parent="."]
anims/Alarm = SubResource( 7 )
anims/Explosion = SubResource( 9 )
anims/RESET = SubResource( 8 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 3 )

[node name="Hitbox_Bomb" parent="." instance=ExtResource( 2 )]
collision_layer = 4
collision_mask = 2

[node name="CollisionShape2D" parent="Hitbox_Bomb" index="0"]
shape = SubResource( 5 )
disabled = true

[node name="Hurtbox" parent="." instance=ExtResource( 1 )]

[node name="CollisionShape2D" parent="Hurtbox" index="0"]
shape = SubResource( 4 )

[node name="LineOfSight" type="RayCast2D" parent="."]
enabled = true
cast_to = Vector2( 100, 0 )
collision_mask = 3

[node name="LineOfSight_AOE" type="RayCast2D" parent="."]
enabled = true
cast_to = Vector2( 20, 0 )
collision_mask = 2

[node name="Line2D" type="Line2D" parent="."]
visible = false
width = 1.0
default_color = Color( 1, 0.188235, 0, 1 )

[node name="Explosion" type="Sprite" parent="."]
scale = Vector2( 1.32819, 1.33937 )
texture = ExtResource( 6 )
hframes = 3
vframes = 3

[connection signal="animation_finished" from="AnimationAlarm" to="." method="_on_AnimationAlarm_animation_finished"]
[connection signal="area_entered" from="Hurtbox" to="." method="_on_Hurtbox_area_entered"]

[editable path="Hitbox_Bomb"]
[editable path="Hurtbox"]
